--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "17.0.2",
     "react-native": "0.65.1",
     "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.7.0"
+    "react-native-screens": "^3.7.0",
+    "react-native-vector-icons": "^8.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -25,6 +26,7 @@
     "@types/jest": "^27.0.1",
     "@types/react": "^17.0.20",
     "@types/react-native": "^0.65.0",
+    "@types/react-native-vector-icons": "^6.4.8",
     "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
