--- a/.eslintrc
+++ b/.eslintrc
@@ -22,6 +22,6 @@
       "jsx-quotes": ["warn", "prefer-double"],
       "quotes": ["warn", "double"],
       "indent": ["warn", 2],
-      "multiline-ternary": ["error", "always"]
+      "@typescript-eslint/explicit-module-boundary-types": 0
     }
   }
