--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -178,6 +178,10 @@ android {
     }
 }
 
+
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
+
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //noinspection GradleDynamicVersion
