--- a/ios/Podfile
+++ b/ios/Podfile
@@ -27,4 +27,6 @@ target 'BukukuProto' do
   post_install do |installer|
     react_native_post_install(installer)
   end
+
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 end
